test_data/data_validation_tests_data/invalid_currency_codes_test_data/bank_export_crypto_currency_test_old.xlsx
version https://git-lfs.github.com/spec/v1
oid sha256:5eba17dd9e8f5c28bf81c0cb6521e1281e047f0b032e94fae29147d372390e99
size 5506
